<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Triathlon ARDA</string>
    <string name="pantallaLogin">Triathlon - Login</string>
    <string name="pantallaModo">Triathlon - Modo</string>
    <string name="hello_world">Hello world!</string>
    <string name="configuracion">Configuración</string>
    <string name="labelUsuario">Usuario:</string>
    <string name="labelPassword">Contraseña:</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar">Iniciar</string>
    <string name="password">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="radioEntrenador">Entrenador</string>
    <string name="radioDeportista">Deportista</string>
    <string name="modoEntrenamiento">Entrenamiento</string>
    <string name="modoCompeticion">Competición</string>
    <string name="modoEstatistica">Estadisticas</string>
    <string name="pantallaEntrenamiento">Triathlon - Entrenamiento</string>
    <string name="condiciones">Añadir Condiciones</string>
    <string name="estadisticasMenu">Estadisticas</string>
    <string name="advertenciaMenu">Advertencia</string>
    <string name="pantallaCompeticion">Triathlon - Competicion</string>
    <string-array name="disciplinas">
        <item >Ciclismo</item>
        <item >Natación</item>
        <item >Carrera a pie</item>
    </string-array>
        <string name="labelCompeticion">Tipo de Competición:</string>
        <string name="labelCantDepor">Cantidad de Deportistas:</string>
        <string name="label1Deportista">Deportista 1:</string>
        <string name="label2Deportista">Deportista 2:</string>
        <string name="label3Deportista">Deportista 3:</string>
        <string name="label4Deportista">Deportista 4:</string>
        <string name="label5Deportista">Deportista 5:</string>
        <string name="textDeportista1">Inseta el nombre del primer deportista</string>
        <string name="textDeportista2">Inseta el nombre del segundo deportista</string>
        <string name="textDeportista3">Inseta el nombre del tercer deportista</string>
        <string name="textDeportista4">Inseta el nombre del cuarto deportista</string>
        <string name="textDeportista5">Inseta el nombre del quinto deportista</string>
        <string-array name="cantidadDeportistas">
            <item >1</item>
            <item >2</item>
            <item >3</item>
            <item >4</item>
            <item >5</item>
        </string-array>
            <string name="siguiente">Siguiente:</string>
            <string name="labelLista">Lista de Sesiones</string>
            <string name="labelTituloDepo">Deportista</string>
            <string name="labelTituloTiempoT">Tiempo Total</string>
            <string name="labelTiempoCi">Tiempo Ciclismo</string>
            <string name="labelTiempoN">Tiempo Natación</string>
            <string name="labelTiempoCa">Tiempo Carrera a pie</string>
            <string name="labelModo">Modo</string>
            <string name="pantallaEstadisticas">Triathlon - Estadisticas</string>
            <string name="labelListaDep">Lista de Deportistas</string>
            <string name="pantallaEntrenamientoEntrenador">Triathlon - Entrenamiento - Modo Entrenador</string>
            <string name="labelSeleccionado">Selecciona Deportista</string>
            <string name="labelNombreDep">Nombre</string>
            <string name="labelApellidosDep">Apellidos</string>
            <string name="labelEdadDep">Edad</string>
            <string name="pantallaEntrenadorDeportista">Triathlon - Captura de datos</string>
            <string name="inicio">Inicio</string>
            <string name="parar">Parar</string>
            <string name="pausa">Pausa</string>
            <string name="nombreDeportista1">Juan Ramirez</string>
            <string name="nombreDeportista2">Elsa Martín</string>
            <string name="nombreDeportista3">Santiago Garcia</string>
            <string name="imagenlogo">Imagen Logo</string>
            <string name="labelTituloDistanciaT">Distancia Total</string>
            <string name="labelTituloModo">Modo</string>
            <string name="usuarioregistro">Usuario:</string>
            <string name="passwordregistro">Contraseña:</string>
            <string name="nombreregistro">Nombre:</string>
            <string name="primerapellidoregistro">Primer Apellido:</string>
            <string name="segundoapellidoregistro">Segundo Apellido:</string>
            <string name="fechanacimientoregistro">Fecha de Nacimiento:</string>
            <string name="sexoregistro">Sexo:</string>
		    <string name="hombreregistro">Hombre</string>
		    <string name="mujerregistro">Mujer</string>
		    <string name="fotoregistro">Foto:</string>
		    <string name="entrenadorregistro">Entrenador</string>
		    <string name="deportistaregistro">Deportista</string>
		    <string name="registrarseregistro">Registrarse</string>
		    <string name="imagenregistro">imagenregistro</string>
		    <string name="aceptarregistro">aceptar</string>
		    <string name="cancelarregistro">Cancelar</string>
		    <string name="insertDistancia">Distancia recorrida</string>
		    <string name="btn_sesiones">Sesiones</string>
		    <string name="btn_competiciones">Competiciones</string>
		    <string name="labelTituloGesSesi">Gestion Sesiones</string>
		    <string name="labelTituloGesDepor">Gestion Deportista</string>
		    <string name="label_titulo_acercade">ARDA</string>
		    <string name="texto_acercade">Aplicación de Rendimiento Deportivo Avanzado</string>
		    <string name="label_nombre_Fernando">Fernando Antonio Díaz-Alonso</string>
		    <string name="label_nombre_Luis">Luis García</string>
		    <string name="label_nombre_Pedro">Pedro Emilio Lis</string>
		    <string name="label_nombre_Fran">Fran Manzano</string>
		    <string name="label_nombre_Daniel">Daniel Amorós</string>
		    <string name="label_nombre_Josue">Josué Zanón</string>
		    <string name="label_fecha_acercade">2013 - 2014</string>
		    <string name="atletismo">Atletismo</string>
		    <string name="ciclismo">Ciclismo</string>
		    <string name="natacion">Natación</string>
		    <string name="modoGestion">Gestión</string>
		    <string name="label_curso_acercade">2º DAM - Florida Ciclos Formativos</string>
		    <string name="btn_graficos">Graficos</string>
</resources>