<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
 
    <LinearLayout
        android:id="@+id/tipoCompe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/labelCompeticion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelCompeticion"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/disciplina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/disciplinas" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/CantDep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/labelCantDepor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelCantDepor"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/cantDeportistas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/cantidadDeportistas" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/primerDepor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label1Deportista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label1Deportista"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/textDeportista1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/textDeportista1"
            android:inputType="time" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/segundoDepor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label2Deportista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label2Deportista"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/textDeportista2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/textDeportista2"
            android:inputType="time" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tercerDepor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label3Deportista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label3Deportista"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/textDeportista3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/textDeportista3"
            android:inputType="time" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cuartoDepor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label4Deportista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label4Deportista"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/textDeportista4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/textDeportista4"
            android:inputType="time" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/quintoDepor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label5Deportista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label5Deportista"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/textDeportista5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/textDeportista5"
            android:inputType="time" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siguiente" />

</LinearLayout>