<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Registro" 
    android:background="#dcdcdc">

    <LinearLayout
        android:layout_width="985dp"
        android:layout_height="432dp"
        android:baselineAligned="false"
        android:gravity="center_horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.53" >

            <requestFocus />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editUsuario"
                android:layout_marginTop="23dp"
                android:text="@string/passwordregistro" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="54dp"
                android:text="@string/usuarioregistro" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editPassword"
                android:layout_marginTop="35dp"
                android:text="@string/nombreregistro" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="27dp"
                android:text="@string/fechanacimientoregistro" />

            <EditText
                android:id="@+id/editUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView1"
                android:layout_alignBottom="@+id/textView1"
                android:layout_marginLeft="31dp"
                android:layout_toRightOf="@+id/textView6"
                android:ems="10"
                android:inputType="text" />

            <EditText
                android:id="@+id/editFechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView6"
                android:layout_alignLeft="@+id/editUsuario"
                android:ems="10"
                android:hint="2000/10/10"
                android:inputType="date" />

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/editFechaNacimiento"
                android:layout_alignLeft="@+id/editFechaNacimiento"
                android:ems="10"
                android:inputType="text" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView2"
                android:layout_alignBottom="@+id/textView2"
                android:layout_alignLeft="@+id/editUsuario"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/radioButtonMujer"
                android:text="@string/registrarse"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView9"
                android:contentDescription="TODO"
                android:src="@drawable/linea_separacion1" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView6"
                android:contentDescription="TODO"
                android:src="@drawable/linea_separacion1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editPassword"
                android:contentDescription="TODO"
                android:src="@drawable/linea_separacion1" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/imageView4"
                android:contentDescription="TODO"
                android:text="@string/sexoregistro" />

            <RadioButton
                android:id="@+id/radioButtonMujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/textView6"
                android:layout_below="@+id/checkBoxDeportista"
                android:text="@string/mujerregistro" />

            <RadioButton
                android:id="@+id/radioButtonHombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/radioButtonMujer"
                android:layout_alignLeft="@+id/radioButtonMujer"
                android:text="@string/hombreregistro" />

            <CheckBox
                android:id="@+id/checkBoxDeportista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/checkBoxEntrenador"
                android:layout_below="@+id/textView8"
                android:text="@string/deportistaregistro" />

            <CheckBox
                android:id="@+id/checkBoxEntrenador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/radioButtonMujer"
                android:layout_alignBottom="@+id/radioButtonMujer"
                android:layout_alignRight="@+id/editFechaNacimiento"
                android:text="@string/entrenadorregistro" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/checkBoxEntrenador"
                android:layout_centerHorizontal="true"
                android:src="@drawable/linea_separacion3" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="544dp"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:src="@drawable/linea_separacion2" />

            <Button
                android:id="@+id/bAcep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="59dp"
                android:layout_toRightOf="@+id/imageView5"
                android:background="@drawable/boton_aceptar_pequeno_registro"
                android:contentDescription="TODO" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="67dp"
                android:contentDescription="@string/imagenregistro"
                android:src="@drawable/nousuario_registro" />

            <Button
                android:id="@+id/bCanc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="43dp"
                android:layout_toRightOf="@+id/bAcep"
                android:background="@drawable/boton_cancerlar_registro_pequeno_2" />

        </RelativeLayout>

    </LinearLayout>

</AbsoluteLayout>
